feat(native): GraalVM native Maven profile, Dockerfile native stage, ARCHITECTURE notes (discipline 7)
Co-authored-by: Cursor <cursoragent@cursor.com>